--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,26 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="side_nav_text">Side Nav</string>
+
+    <!-- Bottom Navigation -->
+    <string name="home">Home</string>
+    <string name="log_meal">Log Meal</string>
+    <string name="history">History</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="sunday">Sunday</string>
+    <string name="saturday">Saturday</string>
+    <string name="manually_add_nutrients">Manually Add Nutrients</string>
+    <string name="favorite_meals">Favorite Meals</string>
+    <string name="previous_meals">Previous meals</string>
+    <string name="log_meal_question">How do you want to log your meal right now?</string>
+    <string name="settings">settings</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
