--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="nutrition_history_text">Your latest nutrition scores</string>
+    <string name="logout">Logout</string>
+    <string name="nutrients_setting_category_text">Nutrients to show in Dashboard:</string>
 </resources>
