--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="proteins_name">Proteins</string>
     <string name="scan_product_name">Scan Product</string>
     <string name="analyse_recipe_name">Analyse Recipe</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
@@ -53,15 +52,18 @@
     <string name="log_meal_question">How do you want to log your meal right now?</string>
     <string name="settings">settings</string>
     <string name="title_activity_main2">MainActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="nutrition_history_text">Your latest nutrition scores</string>
     <string name="logout">Logout</string>
     <string name="nutrients_setting_category_text">Nutrients to show in Dashboard:</string>
+
+    <string name="processed_product">We fou</string>
+    <string name="cancel">cancel</string>
+    <string name="pick_product_quantity">Pick product quantity:</string>
+    <string name="hello_blank_fragment">hello, blank fragment!</string>
+    <string name="grams">grams</string>
+    <string name="close">Close</string>
 </resources>
