--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,10 +60,12 @@
     <string name="logout">Logout</string>
     <string name="nutrients_setting_category_text">Nutrients to show in Dashboard:</string>
 
-    <string name="processed_product">We fou</string>
+    <string name="processed_product">Product processed!</string>
     <string name="cancel">cancel</string>
     <string name="pick_product_quantity">Pick product quantity:</string>
     <string name="hello_blank_fragment">hello, blank fragment!</string>
     <string name="grams">grams</string>
     <string name="close">Close</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="your_favorite_products">Your favorite products</string>
 </resources>
