added dynamic update for nutrient intake progress bars

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="add_to_favorites">Add to favorites</string>
     <string name="your_favorite_products">Your favorite products</string>
     <string name="your_profile_picture">Your profile picture</string>
+    <string name="calories_name">Calories</string>
 </resources>
