--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,6 @@
     <string name="log_branded_product">Log branded product</string>
     <string name="log_custom_meal">Log custom meal</string>
     <string name="add_generic_food">Add Generic Food</string>
+    <string name="go_back_in_time">Go back in time...</string>
 
 </resources>
